# wurstrenderer

./: .gitignore  CMakeLists.txt  README.md  wurst_vs2017.sln  zxcvrenderer.sln
dependencies/assimp/packaging/windows-innosetup/: script_x64.iss
dependencies/embree/tutorials/common/scenegraph/: corona_loader.cpp  obj_loader.cpp
dependencies/embree/tutorials/verify/: verify.cpp
dependencies/pbrt-parser/pbrtParser/include/pbrtParser/: math.h
dependencies/vs2017_precompiled/lib/: assimp-vc140-mt.lib  embree3.lib
src/: main.cpp  wurstrenderer.vcxproj
src/accel/: embreeaccel.h
src/bsdf/: lambertdiffuse.h  mixed.h  orennayar.h  phong.h  simplemetal.h  twosided.h
src/camera/: thinlens.h
src/camera2/: circlegrid.h  flat.h
src/common/: bsdf.h  bvhnnsearch.h  camera.h  camera2.h  cdftable.h  film.h  floatimage.h  geometry.h  hashgrid.h  light.h  ltmath.h  mapping.h  medium.h  mlt.h  parallel.h  path.h  phase.h  progress.h  renderer.h  rng.h  sampler.h  scene.h  scopedassign.h  sphericalrepresentation.h  stopwatch.h  subpathsampler.h  texture.h  trimeshvertexiterator.h  viewer.h  visualizer2.h  wurst.h
src/common/doc/: csv.h
src/common/math/: bound.h  coordframe.h  geometrymath.h  kahan.h  local.h  math.h  matrix4.h  numericalsolver.h  ray.h  scalarmath.h  sh.h  spectrum.h  vecmath.h  vecprim.h  vecsimd.h
src/common/util/: enum.h  envmap.h  errorimage.h  file.h  json.h  pbrt.h  tensor.h  tilesgenerator.h  vector.h
src/ext/ghc/: filesystem.hpp
src/ext/gl/: glext.h
src/ext/sobol/: sobol.h
src/ext/stb/: stb_image.cpp
src/ext/threadpool/: ThreadPool.h
src/ext/tigr/: tigr.cpp  tigr.h
src/ext/tinyexr/: tinyexr.h
src/geometry/: cube.h  phongmesh.h  plane.h  trianglemesh.h
src/light/: diffusearealight.h  envmap.h  smarealight.h
src/medium/: homogeneous.h
src/misc/: georgievbluenoiseditheringmask.h
src/pathsampler/: generalsubpathsampler.h
src/pathsampler2/: simplesubpathsampler2.h
src/phasefunction/: henyengreenstein.h  isotropic.h
src/renderer/: bidirpath.h  diffuseprt.h  dualsubsurface.h  glossyprt2002.h  lightsplatting.h  matrixbidirpath.h  pathnextevent.h  photonmap.h  primitivepath.h  pssmltprimitivepath.h  visualizegeomnormal.h
src/renderer2/: primitivepath2.h  pssmltprimitivepath2.h
src/sampler/: randomsampler.h  sobolsampler.h
src/sceneio/: pbrtparser.h  simple2parser.h  tungstenparser.h
src/sceneio/meshio/: assimpio.h  wo3io.h
src/sphericalrepresentation/: convertutil.h  equirectangular.h  sphericalfibonacci.h  sphericalgaussian.h  sphericalharmonics.h
src/texture/: checkerboard.h  constanttexture.h  imagetexture.h
zxcvrenderer/: main.cpp  zxcvrenderer.vcxproj  zxcvrenderer.vcxproj.filters
zxcvrenderer/common/: parallel.h  zxcv.h
zxcvrenderer/common/floatimage/: floatimage.cpp  floatimage.h  rgbe.cpp
zxcvrenderer/common/math/: math.h  vec.h
zxcvrenderer/ext/gl/: glext.h
zxcvrenderer/ext/stb/: stb_image.h  stb_image_write.cpp  stb_image_write.h
zxcvrenderer/ext/tigr/: tigr.cpp  tigr.h
